--- a/PRACTICA LLDMQS/CSS/style_daily.css
+++ b/PRACTICA LLDMQS/CSS/style_daily.css
@@ -1,5 +1,12 @@
+*{
+    color: black;
+}
+
 #header{
-    background-color: red;
+    background-color: rgb(68, 68, 250);
+}
+#title>h1, #title>h1>strong{
+    color: rgb(252, 252, 67);
 }
 #nocturn_slider{
     background-color: white;
@@ -9,4 +16,13 @@
     transform: translateY(-30%) translateX(75%);
     background-color: white;
     border: 3px black solid;
+}
+#menu>a:hover{
+    color: rgb(252, 252, 67);
+}
+.menu_unselected{
+    color: black;
+}
+.menu_selected{
+    color: yellow;
 }
